# t1-2015-kukoo2adv

./: .gitignore  CREDITS.TXT  FILE_ID.DIZ  LICENSE  README.md
assets/gfx_to_c/: Kukoo2Anniversary_title.lz77  convert.bat  convert3.bat  gba-no-gpu_240x160_juice.lz77  happyend_evoke2015.lz77
assets/music_to_asm/: libkrawall.txt
krawall/: url.txt
krawall/krawerter/: Instrument.cpp  Mod.cpp  ModS3M.cpp  ModXM.cpp  Pattern.cpp  Sample.cpp  types.h
krawall/lib/: CMakeLists.txt  cmake_install.cmake
legacy_toolchain/: note.txt
release/: kukoo2adv.gba
src/: .gitignore  Makefile  crt0.s  instruments.s  krawall.h  kukoo2adv.c  modules.h  music.s  samples.h  samples.s  tonc_bios.h  tonc_bios.s  tonc_bios_ex.s  tonc_core.h  tonc_memcpy.s  tonc_memdef.h  tonc_memmap.h  tonc_types.h
src/gfx/: Kukoo2Anniversary_title.c  PATTERN.map.c  PATTERN.pal.c  PATTERN.raw.c  Witan.pal.c  Witan_Bitmap.c  bulle_64x64.map.c  bulle_64x64.pal.c  bulle_64x64_Tiles.c  damrol1.map.c  gba_240x160_juice.c  happyend_evoke2015.c  tfltdv240x160_8.pal.c  tfltdv240x160_8Bitmap.c
